# advent-of-code-2025

./: Cargo.toml  README.md
eight/: aoc.toml
eight/src/: main.rs
five/: Cargo.toml
five/src/: main.rs
four/src/: main.rs
one/: Cargo.toml
one/src/: main.rs
seven/src/: main.rs
six/: Cargo.toml
six/src/: main.rs
three/src/: main.rs
two/src/: main.rs
