[workspace]
members = [
    "one",
    "support/advent",
    "support/advent_macro",
    "support/parse",
    "support/parse_macro",
    "three",
    "two",
]
resolver = "2"

[workspace.dependencies]
combine = "4.6.7"

[workspace.dependencies.advent]
path = "support/advent"

[workspace.dependencies.advent_macro]
path = "support/advent_macro"

[workspace.dependencies.derive_more]
features = [
    "debug",
    "display",
]
version = "1"

[workspace.dependencies.parse]
path = "support/parse"

[workspace.dependencies.parse_macro]
path = "support/parse_macro"

[workspace.dependencies.strum]
features = ["derive"]
version = "0.26"
